--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
-    "react": "^15.3.2",
+    "react": "^16.2.0",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
-    "redux": "^3.6.0"
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
